--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql://bd13d3e4774d9e:329c05d8@us-cdbr-iron-east-02.cleardb.net/heroku_abf7ac984bbf2e0?reconnect=true
+spring.datasource.url=
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
